# Car_Instrument_Cluster

./: CMakeLists.txt  CircularGaugeMeter.qml  IconButton.qml  Main.qml  README.md  Scene.qml  cluster.cpp  cluster.h  fuelarc.cpp  fuelarc.h  main.cpp  resource.qrc
Control_Dashboard/: Control_Dashboard.ino
Control_Dashboard/Cluster_Can_Receive/: Cluster_Can_Receive.ino
Control_Dashboard/Cluster_Can_Send/: Cluster_Can_Send.ino
QML/: CircularGaugeMeter.qml  IconButton.qml  Scene.qml
asset/meshes/: chrome_001_00_chrome_0_mesh.mesh  chrome_002_00_chrome_0_mesh.mesh  chrome_003_00_chrome_0_mesh.mesh  (+154 more)
cpp_file/: cluster.cpp  fuelarc.cpp
header_file/: cluster.h  fuelarc.h
maps/: glass___Clear_material.qdsbundle
meshes/: body_mesh.mesh  circle_005_mesh.mesh  circle_006_mesh.mesh  circle_007_mesh.mesh  circle_015_mesh.mesh  circle_017_mesh.mesh  cube_002_mesh.mesh  cube_004_mesh.mesh  cube_007_mesh.mesh  front_fender_001_mesh.mesh  front_fender_mesh.mesh  front_grille_texture_mesh.mesh  headlights_l_mesh.mesh  headlights_r_mesh.mesh  hood_mesh.mesh  plane_001_mesh.mesh  plane_004_mesh.mesh  plane_005_mesh.mesh  plane_007_mesh.mesh  plane_008_mesh.mesh  plane_012_mesh.mesh  plane_015_mesh.mesh  plane_019_mesh.mesh  plane_020_mesh.mesh  plane_022_mesh.mesh  plane_024_mesh.mesh  plane_028_mesh.mesh  plane_034_mesh.mesh  plane_036_mesh.mesh  plane_038_mesh.mesh  plane_040_mesh.mesh  plane_044_mesh.mesh  plane_045_mesh.mesh  plane_049_mesh.mesh  plane_050_mesh.mesh  plane_051_mesh.mesh  plane_053_mesh.mesh  plane_054_mesh.mesh  plane_057_mesh.mesh  plane_064_mesh.mesh  (+2 more)
